mruby-sys/mruby_bindings_backuped.rs

extern "C" {
    /// Include a module in another class or module.
    /// Equivalent to:
    ///
    /// module B
    /// include A
    /// end
    /// @param [mrb_state *] mrb_state* The current mruby state.
    /// @param [struct RClass *] RClass* A reference to module or a class.
    /// @param [struct RClass *] RClass* A reference to the module to be included.
    pub fn mrb_include_module(arg1: *mut mrb_state, arg2: *mut RClass, arg3: *mut RClass);
}
extern "C" {
    /// Prepends a module in another class or module.
    ///
    /// Equivalent to:
    /// module B
    /// prepend A
    /// end
    /// @param [mrb_state *] mrb_state* The current mruby state.
    /// @param [struct RClass *] RClass* A reference to module or a class.
    /// @param [struct RClass *] RClass* A reference to the module to be prepended.
    pub fn mrb_prepend_module(arg1: *mut mrb_state, arg2: *mut RClass, arg3: *mut RClass);
}
extern "C" {
    /// Defines a global function in ruby.
    ///
    /// If you're creating a gem it may look something like this
    ///
    /// Example:
    ///
    /// !!!c
    /// mrb_value example_method(mrb_state* mrb, mrb_value self)
    /// {
    /// puts("Executing example command!");
    /// return self;
    /// }
    ///
    /// void mrb_example_gem_init(mrb_state* mrb)
    /// {
    /// mrb_define_method(mrb, mrb->kernel_module, "example_method", example_method, MRB_ARGS_NONE());
    /// }
    ///
    /// @param [mrb_state *] mrb The MRuby state reference.
    /// @param [struct RClass *] cla The class pointer where the method will be defined.
    /// @param [const char *] name The name of the method being defined.
    /// @param [mrb_func_t] func The function pointer to the method definition.
    /// @param [mrb_aspec] aspec The method parameters declaration.
    pub fn mrb_define_method(
        mrb: *mut mrb_state,
        cla: *mut RClass,
        name: *const ::std::os::raw::c_char,
        func: mrb_func_t,
        aspec: mrb_aspec,
    );
}
extern "C" {
    /// Defines a class method.
    ///
    /// Example:
    ///
    /// # Ruby style
    /// class Foo
    /// def Foo.bar
    /// end
    /// end
    /// // C style
    /// mrb_value bar_method(mrb_state* mrb, mrb_value self){
    /// return mrb_nil_value();
    /// }
    /// void mrb_example_gem_init(mrb_state* mrb){
    /// struct RClass *foo;
    /// foo = mrb_define_class(mrb, "Foo", mrb->object_class);
    /// mrb_define_class_method(mrb, foo, "bar", bar_method, MRB_ARGS_NONE());
    /// }
    /// @param [mrb_state *] mrb_state* The MRuby state reference.
    /// @param [struct RClass *] RClass* The class where the class method will be defined.
    /// @param [const char *] char* The name of the class method being defined.
    /// @param [mrb_func_t] mrb_func_t The function pointer to the class method definition.
    /// @param [mrb_aspec] mrb_aspec The method parameters declaration.
    pub fn mrb_define_class_method(
        arg1: *mut mrb_state,
        arg2: *mut RClass,
        arg3: *const ::std::os::raw::c_char,
        arg4: mrb_func_t,
        arg5: mrb_aspec,
    );
}
extern "C" {
    pub fn mrb_define_singleton_method(
        arg1: *mut mrb_state,
        arg2: *mut RObject,
        arg3: *const ::std::os::raw::c_char,
        arg4: mrb_func_t,
        arg5: mrb_aspec,
    );
}
extern "C" {
    /// Defines a module fuction.
    ///
    /// Example:
    ///
    /// # Ruby style
    /// module Foo
    /// def Foo.bar
    /// end
    /// end
    /// // C style
    /// mrb_value bar_method(mrb_state* mrb, mrb_value self){
    /// return mrb_nil_value();
    /// }
    /// void mrb_example_gem_init(mrb_state* mrb){
    /// struct RClass *foo;
    /// foo = mrb_define_module(mrb, "Foo");
    /// mrb_define_module_function(mrb, foo, "bar", bar_method, MRB_ARGS_NONE());
    /// }
    /// @param [mrb_state *] mrb_state* The MRuby state reference.
    /// @param [struct RClass *] RClass* The module where the module function will be defined.
    /// @param [const char *] char* The name of the module function being defined.
    /// @param [mrb_func_t] mrb_func_t The function pointer to the module function definition.
    /// @param [mrb_aspec] mrb_aspec The method parameters declaration.
    pub fn mrb_define_module_function(
        arg1: *mut mrb_state,
        arg2: *mut RClass,
        arg3: *const ::std::os::raw::c_char,
        arg4: mrb_func_t,
        arg5: mrb_aspec,
    );
}
extern "C" {
    /// Defines a constant.
    ///
    /// Example:
    ///
    /// # Ruby style
    /// class ExampleClass
    /// AGE = 22
    /// end
    /// // C style
    /// #include <stdio.h>
    /// #include <mruby.h>
    ///
    /// void
    /// mrb_example_gem_init(mrb_state* mrb){
    /// mrb_define_const(mrb, mrb->kernel_module, "AGE", mrb_fixnum_value(22));
    /// }
    ///
    /// mrb_value
    /// mrb_example_gem_final(mrb_state* mrb){
    /// }
    /// @param [mrb_state *] mrb_state* The MRuby state reference.
    /// @param [struct RClass *] RClass* A class or module the constant is defined in.
    /// @param [const char *] name The name of the constant being defined.
    /// @param [mrb_value] mrb_value The value for the constant.
    pub fn mrb_define_const(
        arg1: *mut mrb_state,
        arg2: *mut RClass,
        name: *const ::std::os::raw::c_char,
        arg3: mrb_value,
    );
}
extern "C" {
    /// Undefines a method.
    ///
    /// Example:
    ///
    /// # Ruby style
    ///
    /// class ExampleClassA
    /// def example_method
    /// "example"
    /// end
    /// end
    /// ExampleClassA.new.example_method # => example
    ///
    /// class ExampleClassB < ExampleClassA
    /// undef_method :example_method
    /// end
    ///
    /// ExampleClassB.new.example_method # => undefined method 'example_method' for ExampleClassB (NoMethodError)
    ///
    /// // C style
    /// #include <stdio.h>
    /// #include <mruby.h>
    ///
    /// mrb_value
    /// mrb_example_method(mrb_state *mrb){
    /// return mrb_str_new_lit(mrb, "example");
    /// }
    ///
    /// void
    /// mrb_example_gem_init(mrb_state* mrb){
    /// struct RClass *example_class_a;
    /// struct RClass *example_class_b;
    /// struct RClass *example_class_c;
    ///
    /// example_class_a = mrb_define_class(mrb, "ExampleClassA", mrb->object_class);
    /// mrb_define_method(mrb, example_class_a, "example_method", mrb_example_method, MRB_ARGS_NONE());
    /// example_class_b = mrb_define_class(mrb, "ExampleClassB", example_class_a);
    /// example_class_c = mrb_define_class(mrb, "ExampleClassC", example_class_b);
    /// mrb_undef_method(mrb, example_class_c, "example_method");
    /// }
    ///
    /// mrb_example_gem_final(mrb_state* mrb){
    /// }
    /// @param [mrb_state*] mrb_state* The mruby state reference.
    /// @param [struct RClass*] RClass* A class the method will be undefined from.
    /// @param [const char*] constchar* The name of the method to be undefined.
    pub fn mrb_undef_method(
        arg1: *mut mrb_state,
        arg2: *mut RClass,
        arg3: *const ::std::os::raw::c_char,
    );
}
extern "C" {
    /// Undefine a class method.
    /// Example:
    ///
    /// # Ruby style
    /// class ExampleClass
    /// def self.example_method
    /// "example"
    /// end
    /// end
    ///
    /// ExampleClass.example_method
    ///
    /// // C style
    /// #include <stdio.h>
    /// #include <mruby.h>
    ///
    /// mrb_value
    /// mrb_example_method(mrb_state *mrb){
    /// return mrb_str_new_lit(mrb, "example");
    /// }
    ///
    /// void
    /// mrb_example_gem_init(mrb_state* mrb){
    /// struct RClass *example_class;
    /// example_class = mrb_define_class(mrb, "ExampleClass", mrb->object_class);
    /// mrb_define_class_method(mrb, example_class, "example_method", mrb_example_method, MRB_ARGS_NONE());
    /// mrb_undef_class_method(mrb, example_class, "example_method");
    /// }
    ///
    /// void
    /// mrb_example_gem_final(mrb_state* mrb){
    /// }
    /// @param [mrb_state*] mrb_state* The mruby state reference.
    /// @param [RClass*] RClass* A class the class method will be undefined from.
    /// @param [constchar*] constchar* The name of the class method to be undefined.
    pub fn mrb_undef_class_method(
        arg1: *mut mrb_state,
        arg2: *mut RClass,
        arg3: *const ::std::os::raw::c_char,
    );
}
extern "C" {
    /// Initialize a new object instace of c class.
    ///
    /// Example:
    ///
    /// # Ruby style
    /// class ExampleClass
    /// end
    ///
    /// p ExampleClass # => #<ExampleClass:0x9958588>
    /// // C style
    /// #include <stdio.h>
    /// #include <mruby.h>
    ///
    /// void
    /// mrb_example_gem_init(mrb_state* mrb) {
    /// struct RClass *example_class;
    /// mrb_value obj;
    /// example_class = mrb_define_class(mrb, "ExampleClass", mrb->object_class); # => class ExampleClass; end
    /// obj = mrb_obj_new(mrb, example_class, 0, NULL); # => ExampleClass.new
    /// mrb_p(mrb, obj); // => Kernel#p
    /// }
    /// @param [mrb_state*] mrb The current mruby state.
    /// @param [RClass*] c Reference to the class of the new object.
    /// @param [mrb_int] argc Number of arguments in argv
    /// @param [const mrb_value *] argv Array of mrb_value to initialize the object
    /// @return [mrb_value] The newly initialized object
    pub fn mrb_obj_new(
        mrb: *mut mrb_state,
        c: *mut RClass,
        argc: mrb_int,
        argv: *const mrb_value,
    ) -> mrb_value;
}
extern "C" {
    pub fn mrb_instance_new(mrb: *mut mrb_state, cv: mrb_value) -> mrb_value;
}
extern "C" {
    /// Creates a new instance of Class, Class.
    ///
    /// Example:
    ///
    /// void
    /// mrb_example_gem_init(mrb_state* mrb) {
    /// struct RClass *example_class;
    ///
    /// mrb_value obj;
    /// example_class = mrb_class_new(mrb, mrb->object_class);
    /// obj = mrb_obj_new(mrb, example_class, 0, NULL); // => #<#<Class:0x9a945b8>:0x9a94588>
    /// mrb_p(mrb, obj); // => Kernel#p
    /// }
    ///
    /// @param [mrb_state*] mrb The current mruby state.
    /// @param [struct RClass *] super The super class or parent.
    /// @return [struct RClass *] Reference to the new class.
    pub fn mrb_class_new(mrb: *mut mrb_state, super_: *mut RClass) -> *mut RClass;
}
extern "C" {
    /// Creates a new module, Module.
    ///
    /// Example:
    /// void
    /// mrb_example_gem_init(mrb_state* mrb) {
    /// struct RClass *example_module;
    ///
    /// example_module = mrb_module_new(mrb);
    /// }
    ///
    /// @param [mrb_state*] mrb The current mruby state.
    /// @return [struct RClass *] Reference to the new module.
    pub fn mrb_module_new(mrb: *mut mrb_state) -> *mut RClass;
}
extern "C" {
    /// Returns an mrb_bool. True if class was defined, and false if the class was not defined.
    ///
    /// Example:
    /// void
    /// mrb_example_gem_init(mrb_state* mrb) {
    /// struct RClass *example_class;
    /// mrb_bool cd;
    ///
    /// example_class = mrb_define_class(mrb, "ExampleClass", mrb->object_class);
    /// cd = mrb_class_defined(mrb, "ExampleClass");
    ///
    /// // If mrb_class_defined returns 1 then puts "True"
    /// // If mrb_class_defined returns 0 then puts "False"
    /// if (cd == 1){
    /// puts("True");
    /// }
    /// else {
    /// puts("False");
    /// }
    /// }
    ///
    /// @param [mrb_state*] mrb The current mruby state.
    /// @param [const char *] name A string representing the name of the class.
    /// @return [mrb_bool] A boolean value.
    pub fn mrb_class_defined(mrb: *mut mrb_state, name: *const ::std::os::raw::c_char) -> mrb_bool;
}
